# crack-detection

./: CMakeLists.txt  README.md  build.sh  deploy.sh
src/: App.cpp  v4l2_h264.cpp
src/draw/: cv_draw.cpp  cv_draw.h
src/engine/: rknn_engine.cpp
src/io/: CircularQueue.h  io_interface.h  nats_client.h  udp.h  udp_kcp.h
src/msg/: msg.h
src/process/: postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
src/types/: video_infos_type.h
src/utils/: cxxopts.hpp  engine_helper.h  logging.h  rk_helper.cpp
src/video/: MPPDecoder.h  rkmpp_decoder.h  rkmpp_encoder.h
src/yolo/: Yolov8Detection.cpp  Yolov8Detection.h  yolov8_thread_pool.cpp  yolov8_thread_pool.h
